[gd_scene load_steps=5 format=3 uid="uid://bvdt2mvdyvokq"]

[ext_resource type="Script" uid="uid://bven71qdfs5jt" path="res://scenes/ui/pause_menu_ui.gd" id="1_31fmg"]
[ext_resource type="PackedScene" uid="uid://lgpv656d2gli" path="res://scenes/ui/settings_ui.tscn" id="1_jfoc7"]
[ext_resource type="AudioStream" uid="uid://dwd683o4iyrjc" path="res://audio/sfx/ui/button_click.ogg" id="3_8358y"]
[ext_resource type="AudioStream" uid="uid://bb1knabcs2216" path="res://audio/sfx/ui/button_hover.ogg" id="4_642b2"]

[node name="PauseOverlay" type="ColorRect" node_paths=PackedStringArray("settings_ui", "pause_menu_vbc", "quit_button")]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.686275)
script = ExtResource("1_31fmg")
main_menu_scene_path = "uid://dyawlu53u7bd2"
settings_ui = NodePath("VBoxContainer/SettingsUI")
pause_menu_vbc = NodePath("VBoxContainer/PauseMenuVBC")
quit_button = NodePath("VBoxContainer/PauseMenuVBC/QuitButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PausedLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "ui.paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -54.0
offset_right = 49.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuVBC" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer/PauseMenuVBC"]
layout_mode = 2
text = "ui.menu.resume"

[node name="SettingsButton" type="Button" parent="VBoxContainer/PauseMenuVBC"]
layout_mode = 2
text = "ui.menu.settings"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/PauseMenuVBC"]
layout_mode = 2
text = "ui.menu.to_main_menu"

[node name="QuitButton" type="Button" parent="VBoxContainer/PauseMenuVBC"]
layout_mode = 2
text = "ui.menu.quit"

[node name="SettingsUI" parent="VBoxContainer" instance=ExtResource("1_jfoc7")]
visible = false
layout_mode = 2

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8358y")
bus = &"SFX"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_642b2")
volume_db = -5.0
bus = &"SFX"

[connection signal="mouse_entered" from="VBoxContainer/PauseMenuVBC/ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PauseMenuVBC/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PauseMenuVBC/SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PauseMenuVBC/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PauseMenuVBC/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PauseMenuVBC/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/PauseMenuVBC/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PauseMenuVBC/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="back_pressed" from="VBoxContainer/SettingsUI" to="." method="_on_settings_ui_back_pressed"]
